--- a/main.html
+++ b/main.html
@@ -43,7 +43,7 @@
 
                 <div class="col-md-4 mb-3">
                     <label for="grad-year-select" class="form-label">Graduation Year</label>
-                    <select class="custom-select" id="grad-year-select" required>
+                    <select class="custom-select form-control form-select" id="grad-year-select" required>
                         <option value="" selected disabled>Choose...</option>
                         <option value="2020">2020</option>
                         <option value="2021">2021</option>
